# mail-server

./: chunk_hashes.json  chunkkq.json  config.yaml  data12  go.mod  go.sum  main.go
.states/vm-cancun/: state.json
app/: app.go
cmd/client/: client.go  client_test.go  tps.go
config/: config.go
contracts/: Makefile
contracts/cache/: solidity-files-cache.json
contracts/src/: file.sol  file1.sol  file_save.sol  mailFactory.sol  mailStorage.sol
contracts/test/: file.t.sol  mail.t.sol
emailstorage/: EmailStorage.go
mtn/: README.md
mtn/account_state_db/: account_state_db.go  account_state_db_test.go
mtn/block/: block.go  block_header.go  confirmed_block_data.go  confirmed_block_data_test.go
mtn/bls/: bls.go  bls_test.go  key_pair.go  key_pair_test.go
mtn/checkpoint/: checkpoint.go  checkpoint_test.go
mtn/common/: command.go  constant.go  utilities.go
mtn/consensus/: consensus.go
mtn/execute_sc_grouper/: execute_sc_grouper.go  execute_sc_grouper_test.go
mtn/logger/: logger.go
mtn/monitor_service/: monitor.go
mtn/mvm/: extension.go  extension_test.go  helpers.go  logger.go  mvm_api.go  mvm_test.go  types.go
mtn/mvm/linker/: CMakeLists.txt
mtn/mvm/linker/include/: mvm_linker.hpp  my_extension.h  my_global_state.h  my_storage.h
mtn/mvm/linker/src/: mvm_linker.cpp  my_extension.cpp  my_global_state.cpp  my_storage.cpp
mtn/network/: connection.go  connections_manager.go  handler.go  message.go  message_sender.go  request.go  server.go
mtn/nodes_state/: nodes_state.go  nodes_state_test.go
mtn/pack/: pack.go  packs_from_leader.go  verify_pack_sign.go
mtn/pack_pool/: pack_pool.go
mtn/proto/: block.pb.go  block_vote.pb.go  checkpoint.pb.go  event_log.pb.go  merkle_patricia_trie.pb.go  message.pb.go  messages.pb.go  pack.pb.go  poh.pb.go  receipt.pb.go  smart_contract.pb.go  state.pb.go  stats.pb.go  sync.pb.go  (+1 more)
pkg/: README.md
proxy/: proxy.go
sc/: file.abi  src_mailFactory_sol_FactoryMail.abi  src_mailStorage_sol_EmailStorage.abi
send-mail/: data12_sendmail  file1.txt  html.go  html_inlineImage.go  html_inlineImagebase64.go  html_manyfile.go  send.go
services/: sendTx.go
types/: block.go  config.go  event_log.go  pack.go  receipt.go  smart_contract.go  state.go  state_db.go  transaction.go  vote.go
utils/: hashkey.go
(+288 files in other folders)
